--- a/src/components/VideoItemDetails/index.css
+++ b/src/components/VideoItemDetails/index.css
@@ -19,3 +19,10 @@ hr {
   display: flex;
   align-items: center;
 }
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
